# slic

./: .gitignore  CMakeLists.txt  README.md  report.txt  slic.cpp  slic.h  slic_sp_features.sln  test_slic.cpp
slic_sp_features/: Boost_Debug.x64.props  OpenCV_Debug.x64.props  OpenCV_Release.x64.props  slic.cpp  slic.h  slic_sp_features.vcxproj  slic_sp_features.vcxproj.filters  test_slic.cpp
